# railgun

./: .cctpl  .gitignore  AUTHORS  DEPENDENCY  README.md  babel.cfg  config.py  manage.py  packhw.py  readthedocs-requirements.txt  requirements.txt  runner.py  runtests.py  userhost.py  website.py
docs/: Makefile  conf.py  contents.rst.inc  framework.rst  index.rst  makepdf.sh  sphinx_patch.py
docs/api/: common.rst  runlib.rst  runner.rst  userhost.rst  website.rst
docs/design/: multilang.rst  overview.rst  packages.rst  webapi.rst
docs/userguide/: configuration.rst  foreword.rst  homework.rst  installation.rst  practice.rst
hw/arith_api/: hw.xml
hw/arith_api/desc/: en.md  zh-cn.md
hw/black_box/: hw.xml
hw/black_box/desc/: en.md  zh-cn.md
hw/black_box/solve/: en.md
hw/example/: hw.xml
hw/example/data/: hide.txt  lock.txt
hw/example/desc/: en.md  zh-cn.md
hw/example2/: hw.xml
hw/reform_path/: hw.xml
hw/reform_path/desc/: en.md  zh-cn.md
hw/reform_path/solve/: en.md
hw/test/: hw.xml
hw/white_box/: hw.xml
hw/white_box/desc/: en.md  zh-cn.md
hw/white_box/solve/: en.md
hw/xunit/: hw.xml
hw/xunit/desc/: en.md  zh-cn.md
hw/xunit/solve/: en.md
railgun/: __init__.py
railgun/common/: __init__.py  crypto.py  csvdata.py  dateutil.py  fileutil.py  gravatar.py  hw.py  lazy_i18n.py  models.py  osutil.py  pyutil.py  tempdir.py  url.py
railgun/maintain/: __init__.py  base.py  hwcache.py  permissions.py  tzcache.py
railgun/runner/: __init__.py  apiclient.py  context.py  credential.py  errors.py  handin.py  host.py  hw.py  permcheck.py  runconfig.py  tasks.py
railgun/userhost/: __init__.py  client.py  server.py  userpool.py
railgun/website/: __init__.py  admin.py  api.py  codelang.py  context.py  credential.py  forms.py  gravatar.py  hw.py  i18n.py  jinja_filters.py  ldapauth.py  ldapconfig.py  manual.py  models.py  navibar.py  renders.py  scriptlibs.py  thuauth.py  userauth.py  utility.py  views.py  webconfig.py
railgun/website/manual/: base.md
railgun/website/templates/: 404.html  admin.adduser.html  admin.csvdata.html  admin.edit_vote.html  admin.edit_vote_signup.html  admin.handins.html  admin.html  admin.hwcharts.html  admin.maintain.html  admin.manage_vote_signup.html  admin.scores.html  admin.user_edit.html  admin.users.html  base.handins.html  base.html  base.user_edit.html  dashboard.html  test.html  (+14 more)
refs/reform_path/: path.py
runlib/python/: __init__.py
runlib/python/pyhost/CSafeRunner/: CMakeLists.txt
runlib/python/pyhost/CSafeRunner/src/: apiclient.cpp  apiclient.h  crypto.cpp  crypto.h  gettext.cpp  gettext.h  main.cpp  pyhost.cpp  pyhost.h  score.cpp  score.h  utility.cpp  utility.h  variant.cpp  variant.h
sql/: mysql.sql
tests/: __init__.py  test_pyscorer.py  test_sample.py  test_timezone.py
tests/pyscorer_data/: __init__.py  sample.py  sample_test.py
tools/: autolint.py  debian-install-runner.sh  debian-installer.sh  env.sh  hashpass.py  initsql.py  l10n-compile.sh  l10n-setup.sh  l10n-update.sh  makekeys.py  mkenv.sh  mktz.py  patchall.py  srcgrep.py  website.sh
(+72 files in other folders)
